# autogest

./: .gitignore  Protótipo em c.rar  README.md  analysis_options.yaml  ffigen.yaml  pubspec.yaml
Protótipo em c/: README.md  abastecimento.c  autogest.h  dados.c  datas.c  entrada.c  main.c  manutencao.c  relatorios.c  veiculo.c
android/: settings.gradle.kts
android/app/: build.gradle.kts
lib/: main.dart
lib/data/: abastecimento_dao.dart  app_database.dart  db_init.dart  db_init_io.dart  db_init_stub.dart  db_init_web.dart  manutencao_dao.dart  veiculo_dao.dart
lib/models/: abastecimento.dart  alerta.dart  enums.dart  manutencao.dart  resumo_gastos.dart  time_conv.dart  veiculo.dart
lib/providers/: abastecimento_provider.dart  dashboard_provider.dart  manutencao_provider.dart
lib/screens/: home_shell.dart
lib/screens/abastecimentos/: abastecimento_form.dart  abastecimentos_screen.dart
lib/screens/dashboard/: dashboard_screen.dart  veiculo_dialog.dart
lib/screens/graficos/: graficos_screen.dart
lib/screens/manutencoes/: manutencao_form.dart  manutencoes_screen.dart
lib/services/: autogest_service.dart  ffi_service.dart  mock_service.dart
lib/src/ffi/: autogest_bindings.dart
lib/theme/: app_colors.dart  app_theme.dart  formatters.dart
lib/widgets/: campo_data.dart  gauge_consumo.dart  info_card.dart  parse_num.dart  status_pill.dart
native/: CMakeLists.txt  autogest.h
native/Test/: test_autogest.c
native/src/: alertas.c  banco.c  calculos.c  dados.c  inputs.c  validacao.c
test/: widget_test.dart
tmp/cmake-native/: CMakeCache.txt
(+4 files in other folders)
